# SDI

./: LocationData.txt  README.md
qt_sdi/: CMakeLists.txt  main.cpp
sdi_app/: CMakeLists.txt  LocationData.csv  login.cpp  login.ui  tests.pro
sdi_app/gui/: application.cpp  application.h  application.ui  driver_reg.cpp  driver_reg.h  driver_reg.ui  menu_cargoown.cpp  menu_cargoown.h  menu_cargoown.ui  menu_company.cpp  menu_company.h  menu_company.ui  menu_driver.cpp  menu_driver.h  menu_driver.ui  menu_forwarder.cpp  menu_forwarder.h  menu_forwarder.ui  menu_owner.cpp  menu_owner.h  menu_owner.ui  menu_receiver.cpp  menu_receiver.h  menu_receiver.ui  menu_trcomp.cpp  menu_trcomp.h  menu_trcomp.ui  order_history.cpp  order_history.h  order_history.ui  registration.cpp  registration.h  registration.ui  start.cpp  start.h  start.ui  user_type.cpp  user_type.h  user_type.ui
sdi_app/headers/: cargo.h  cargo_owner.h  cargo_receiver.h  driver.h  forwarder.h  login.h  myudp.h  transp_company.h  user.h
sdi_app/nlohmann/detail/input/: binary_reader.hpp
sdi_app/src/: cargo.cpp  cargo_owner.cpp  driver.cpp  forwarder.cpp  main.cpp  myudp.cpp  tests.cpp  transp_company.cpp  user.cpp
sdi_project/: CMakeLists.txt
sdi_project/headers/: login.h
